fixed vertical alignment of button + text

--- a/packages/frontend/app/styles/components/school-vocabulary-manager.scss
+++ b/packages/frontend/app/styles/components/school-vocabulary-manager.scss
@@ -37,6 +37,8 @@
 
     .saved-result {
       border: 1px solid c.$fernGreen;
+      display: flex;
+      gap: 0.25rem;
       margin: 1rem;
       padding: 1rem;
     }
